[package]
name = "community"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0-pre.3"
near-contract-standards = "4.1.0-pre.3"
uint = { version = "0.9.3", default-features = false }
near-fixed-bit-tree = "0.0.0"
near-non-transferable-token = "0.0.4"
ed25519-dalek = { version = "1.0.1", features = ["alloc"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
